--- a/.github/workflows/cicd-front-end.yml
+++ b/.github/workflows/cicd-front-end.yml
@@ -19,7 +19,7 @@ jobs:
         aws-region: 'us-east-1' 
 
     - name: S3 sync
-      run: aws s3 sync . s3://cloud-resume-challenge-bucket5673442 --delete
+      run: aws s3 sync ./resume3.0 s3://cloud-resume-challenge-bucket5673442 --delete
         
     - name: Cloudfront create-invalidation
       run: aws cloudfront create-invalidation --distribution-id E25PTMM0VI4A49 --paths "/*"       
