--- a/.github/workflows/cicd-front-end.yml
+++ b/.github/workflows/cicd-front-end.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
+    # First we must configure our AWS credentials using parameter secrets.
+    # https://github.com/aws-actions/configure-aws-credentials
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -18,9 +20,13 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: 'us-east-1' 
 
+    # Run a S3 sync action to upload complete website to the bucket. The '--delete' flag to ensure old files are deleted.
+    # https://docs.aws.amazon.com/cli/latest/reference/s3/sync.html
     - name: S3 sync
       run: aws s3 sync ./resume3.0 s3://cloud-resume-challenge-bucket5673442 --delete
-        
+
+    # Running cloudfront invalidate so old website files are removed from cache.
+    # https://docs.aws.amazon.com/cli/latest/reference/cloudfront/create-invalidation.html
     - name: Cloudfront create-invalidation
       run: aws cloudfront create-invalidation --distribution-id E25PTMM0VI4A49 --paths "/*"       
         
