--- a/.github/workflows/cicd-front-end.yml
+++ b/.github/workflows/cicd-front-end.yml
@@ -1,4 +1,4 @@
-name : Frontend CI/CD
+name: Frontend CI/CD
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-    # Start by configuring AWS credentials using parameter secrets.
+    # Starts by configuring AWS credentials using parameter secrets.
     # https://github.com/aws-actions/configure-aws-credentials
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
