--- a/.github/workflows/cicd-front-end.yml
+++ b/.github/workflows/cicd-front-end.yml
@@ -23,7 +23,8 @@ jobs:
     # Run a S3 sync action to upload complete website to the bucket. The '--delete' flag to ensure old files are deleted.
     # https://docs.aws.amazon.com/cli/latest/reference/s3/sync.html
     - name: S3 sync
-      run: aws s3 sync ./resume3.0 s3://cloud-resume-challenge-bucket5673442 --delete
+      # run: aws s3 sync ./resume3.0 s3://cloud-resume-challenge-bucket5673442 --delete
+      run: aws s3 sync ./resume3.0 s3://cloudresumebucket1234212321 --delete
 
     # Running cloudfront invalidate so old website files are removed from cache.
     # https://docs.aws.amazon.com/cli/latest/reference/cloudfront/create-invalidation.html
