cicd backend update

--- a/.github/workflows/cicd-back-end.yml
+++ b/.github/workflows/cicd-back-end.yml
@@ -85,8 +85,8 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install aws-sam-cli
       #look here
-      # - name: Set PYTHONPATH
-      #   run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)/IaC" >> $GITHUB_ENV
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)/IaC" >> $GITHUB_ENV
 
       - name: Run tests
         run: pytest IaC/tests/unit/ 
