--- a/.github/workflows/cicd-back-end.yml
+++ b/.github/workflows/cicd-back-end.yml
@@ -100,11 +100,12 @@ jobs:
       #     sudo ./aws/install
 
       - name: SAM Build
-        run: sam build
+        # run: sam build
+        run: sam build -t IaC/template.yaml
 
       - name: SAM Package
         run: |
-          sam package --template-file .aws-sam/build/template.yaml --output-template-file packaged.yaml --s3-bucket ${{ secrets.AWS_S3_BUCKET }}
+          sam package --template-file .aws-sam/build/IaC/template.yaml --output-template-file packaged.yaml --s3-bucket ${{ secrets.AWS_S3_BUCKET }}
 
       - name: SAM Deploy
         run: |
