--- a/.github/workflows/cicd-back-end.yml
+++ b/.github/workflows/cicd-back-end.yml
@@ -113,8 +113,8 @@ jobs:
 
       - name: SAM Deploy
         run: |
-          sam deploy --template-file packaged.yaml --stack-name IaC --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND
+          sam deploy --template-file packaged.yaml --stack-name IaC --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND --region us-east-1
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'us-east-1'
+          
