--- a/.github/workflows/cicd-front-end.yml
+++ b/.github/workflows/cicd-front-end.yml
@@ -54,19 +54,21 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: 'us-east-1' 
 
+    # Run a S3 sync action to upload complete website to the bucket. The '--delete' flag to ensure old files are deleted.
+    # https://docs.aws.amazon.com/cli/latest/reference/s3/sync.html
+    - name: S3 sync
+      run: aws s3 sync ./resume3.0 s3://cloudresumebucket1234212321 --delete
+
     - name: Get CloudFront distribution ID
       id: get_distribution_id
       run: |
-        DISTRIBUTION_ID=$(aws cloudfront list-distributions --query "DistributionList.Items[?Aliases.Items[0] == 'ghope.cloud'].Id" --output text --region us-east-1 | awk -F'/' '{print $2}')
+        DISTRIBUTION_ID=$(aws cloudformation describe-stacks --stack-name IaC --query "Stacks[0].Outputs[?OutputKey=='CloudFrontDistributionId'].OutputValue" --output text)
         echo "::set-output name=distribution_id::$DISTRIBUTION_ID"
-
-
 
     - name: Cloudfront create-invalidation
       run: |
-        DISTRIBUTION_ID=$(echo "${{ steps.get_distribution_id.outputs.distribution_id }}" | awk -F'/' '{print $2}')
+        DISTRIBUTION_ID=${{ steps.get_distribution_id.outputs.distribution_id }}
         aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
 
-          
-        
+            
                 
