--- a/IaC/template.yaml
+++ b/IaC/template.yaml
@@ -148,6 +148,8 @@ Resources:
             Service: lambda.amazonaws.com
           Action: sts:AssumeRole
       Path: /
+      ManagedPolicyArns:
+      - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
       Policies:
       - PolicyName: LambdaGetItemDynamoDBAccess
         PolicyDocument:
