--- a/.github/workflows/cicd-front-end.yml
+++ b/.github/workflows/cicd-front-end.yml
@@ -42,6 +42,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    needs: cicd-back-end
     steps:
     - uses: actions/checkout@master
 
@@ -58,7 +59,7 @@ jobs:
     # https://docs.aws.amazon.com/cli/latest/reference/s3/sync.html
     - name: S3 sync
       run: aws s3 sync ./resume3.0 s3://cloudresumebucket1234212321 --delete
-      
+
       ############################################################
     - name: Generate config.js
       run: echo "export const apiUrl = '$(cat IaC/config.js)'" > ./resume3.0/config.js
