--- a/.github/workflows/cicd-back-end.yml
+++ b/.github/workflows/cicd-back-end.yml
@@ -58,4 +58,4 @@ jobs:
         id: get_api_url
         run: |
           API_URL=$(aws cloudformation describe-stacks --stack-name IaC --query "Stacks[0].Outputs[?OutputKey=='HelloWorldApi'].OutputValue" --output text)
-          echo "::set-output name=api_url::$API_URL"
+        # echo "::set-output name=api_url::$API_URL"
