--- a/.github/workflows/cicd-back-end.yml
+++ b/.github/workflows/cicd-back-end.yml
@@ -57,5 +57,5 @@ jobs:
       - name: Get API URL 2
         id: get_api_url
         run: |
-          API_URL=$(aws cloudformation describe-stacks --stack-name IaC --query "Stacks[0].Outputs[?OutputKey=='HelloWorldApi'].OutputValue" --output text)
-        # echo "::set-output name=api_url::$API_URL"
+          API_URL=$(aws cloudformation describe-stacks --stack-name IaC --region us-east-1 --query "Stacks[0].Outputs[?OutputKey=='HelloWorldApi'].OutputValue" --output text)
+          echo "::set-output name=api_url::$API_URL"
