--- a/.github/workflows/cicd-back-end.yml
+++ b/.github/workflows/cicd-back-end.yml
@@ -59,3 +59,6 @@ jobs:
         run: |
           API_URL=$(aws cloudformation describe-stacks --stack-name IaC --region us-east-1 --query "Stacks[0].Outputs[?OutputKey=='HelloWorldApi'].OutputValue" --output text)
           echo "::set-output name=api_url::$API_URL"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
