--- a/.github/workflows/cicd-front-end.yml
+++ b/.github/workflows/cicd-front-end.yml
@@ -27,9 +27,9 @@ jobs:
       run: aws s3 sync ./resume3.0 s3://cloudresumebucket1234212321 --delete
 
       ############################################################
-    # - name: Generate config.js
-    #   #needs: cicd-back-end
-    #   run: echo "export const apiUrl = '$(cat IaC/config.js)'" > ./resume3.0/config.js
+    - name: Generate config.js
+      #needs: cicd-back-end
+      run: echo "export const apiUrl = '$(cat IaC/config.js)'" > ./resume3.0/config.js
 
     - name: Get CloudFront distribution ID
       id: get_distribution_id
