--- a/.github/workflows/cicd-front-end.yml
+++ b/.github/workflows/cicd-front-end.yml
@@ -21,15 +21,26 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: 'us-east-1' 
 
+    - name: Get API URL
+      id: get_api_url
+      run: |
+        API_URL=$(aws cloudformation describe-stacks --stack-name IaC --query "Stacks[0].Outputs[?OutputKey=='HelloWorldApi'].OutputValue" --output text)
+        echo $API_URL >> $GITHUB_ENV 
+      #new
+
     # Run a S3 sync action to upload complete website to the bucket. The '--delete' flag to ensure old files are deleted.
     # https://docs.aws.amazon.com/cli/latest/reference/s3/sync.html
     - name: S3 sync
       run: aws s3 sync ./resume3.0 s3://cloudresumebucket1234212321 --delete
 
+    - name: Update index.js
+      run: sed -i "s|const apiUrl = '.*';|const apiUrl = '${{ env.API_URL }}';|" ./resume3.0/index.js
+      #new
+      
       ############################################################
-    - name: Generate config.js
-      #needs: cicd-back-end
-      run: echo "export const apiUrl = '$(cat IaC/config.js)'" > ./resume3.0/config.js
+    # - name: Generate config.js
+    #   #needs: cicd-back-end
+    #   run: echo "export const apiUrl = '$(cat IaC/config.js)'" > ./resume3.0/config.js ------- last benchmark
 
     - name: Get CloudFront distribution ID
       id: get_distribution_id
