--- a/.github/workflows/cicd-front-end.yml
+++ b/.github/workflows/cicd-front-end.yml
@@ -28,14 +28,14 @@ jobs:
         echo $API_URL >> $GITHUB_ENV 
       #new
 
+    - name: Generate config.js
+      run: echo "export const apiUrl = '${{ steps.get_api_url.outputs.api_url }}'" > ./resume3.0/config.js
+      #new
+
     # Run a S3 sync action to upload complete website to the bucket. The '--delete' flag to ensure old files are deleted.
     # https://docs.aws.amazon.com/cli/latest/reference/s3/sync.html
     - name: S3 sync
       run: aws s3 sync ./resume3.0 s3://cloudresumebucket1234212321 --delete
-
-    - name: Update index.js
-      run: sed -i "s|const apiUrl = '.*';|const apiUrl = '${{ env.API_URL }}';|" ./resume3.0/index.js
-      #new
       
       ############################################################
     # - name: Generate config.js
